--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,51 @@ body {
     color: white;
     background-color: #202731;
     width: 100%;
+    height: 100%;
     margin: 0;
-    /* overflow: hidden; */
+    overflow: hidden;
+}
+
+.desktop {
+    width: 100%;
+    background-image: url('https://github.com/yik-wee.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.menu {
+    margin-top: 5%;
+    margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: end;
+    row-gap: 10px;
+}
+
+.menu>li, .menu>ul {
+    list-style-type: none;
+}
+
+.menu>* {
+    border-radius: 4px;
+    padding: 6px;
+    background: linear-gradient(to left, lightblue 50%, #333e4e 50%) left;
+    background-size: 250%;  /* extra 50% cause hover colour can still barely show*/
+    transition: 100ms ease-in-out;
+}
+
+.menu>*::before {
+    content: '->';
+}
+
+.menu>*:hover, .menu>*:active {
+    cursor: pointer;
+    background-position: right;
+}
+
+.menu>a {
+    text-decoration: none;
+    color: white;
 }
